--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,9 @@
-appdirs==1.4.2
-defusedxml==0.4.1
-google-auth==0.8.0
-google-auth-httplib2==0.0.2
-google-cloud-core==0.23.1
-google-cloud-translate==0.23.0
-googleapis-common-protos==1.5.2
-gyp==0.1
-httplib2==0.10.3
-Magic-file-extensions==0.2
+appdirs==1.4.3
+Django==1.11
+django-datetime-widget==0.9.3
+django-widget-tweaks==1.4.1
 packaging==16.8
-pbr==1.10.0
-pdfminer==20140328
-protobuf==3.2.0
-pyasn1==0.2.3
-pyasn1-modules==0.0.8
-pyliblzma==0.5.3
-pyparsing==2.1.10
-requests==2.13.0
-rsa==3.4.2
+pyjade==4.0.0
+pyparsing==2.2.0
+pytz==2017.2
 six==1.10.0
-SOAPpy==0.12.22
-stevedore==1.18.0
-virtualenv==15.1.0
-virtualenv-clone==0.2.6
-virtualenvwrapper==4.7.2
-wstools==0.4.3
