--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ appdirs==1.4.3
 Django==1.11
 django-datetime-widget==0.9.3
 django-widget-tweaks==1.4.1
+gunicorn==19.7.1
 packaging==16.8
 pyjade==4.0.0
 pyparsing==2.2.0
 pytz==2017.2
 six==1.10.0
+whitenoise==3.3.0
